--- a/LeetmetricApp/style.css
+++ b/LeetmetricApp/style.css
@@ -6,7 +6,7 @@
 }
 
 body{
-    background-color:rgb(89, 90, 106);
+    background-color:#2c3e50;
     color: white;
     height: 100vh;
     display: flex;
@@ -18,14 +18,16 @@ body{
     display: flex;
     flex-direction: column;
     gap: 1rem;
-    background-color: rgb(69, 64, 64);
+    background-color: #34495e;
     padding: 20px;
     width: 50%;
+    border-radius: 10px;
     max-width: 600px;
 }
 
 h1{
     font-size: 2rem;
+    text-align: center;
 }
 
 .user-container{
@@ -44,11 +46,23 @@ h1{
     width: 80%;
     padding: 0.4rem;
     border-radius: 5px;
+    border: 1px solid #bdc3c7;
+    background-color: #ecf0f1;
+    color: #2c3e50;
 }
 
 #search-btn{
     padding: 0.4rem;
     border-radius: 5px;
+    cursor: pointer;
+    background-color: #e74c3c;
+    color: white;
+    border: none;
+    transition: background-color 0.3s;
+}
+
+#search-btn:hover {
+    background-color: #c0392b;
 }
 
 .circle{
@@ -67,6 +81,7 @@ h1{
     flex-direction: column;
 }
 
+
 .circle span{
     position: relative;
     z-index: 2;
@@ -78,4 +93,63 @@ h1{
     justify-content: space-evenly;
     gap: 10px;
     flex-wrap: wrap;
+}
+
+.stats-card{
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 10px;
+    justify-content: space-evenly;
+}
+
+h4{
+    font-size: 1rem;
+}
+
+/* .card{
+    background-color: rgb(230, 146, 44);
+    width: 40%;
+    max-width: 290px;
+    padding: 10px;
+    border-radius: 10px;
+    font-size: 1rem;
+    min-height: 4rem;
+}
+
+.card:hover{
+    transform: translateY(-5px);
+    box-shadow: 0 8px 16px rgba(87, 87, 87, 0.2);
+} */
+.card {
+    background: linear-gradient(270deg, #ff7e5f, #feb47b, #ff6f61, #ff9a8b);
+    background-size: 400% 400%;
+    width: 40%;
+    max-width: 290px;
+    padding: 10px;
+    border-radius: 10px;
+    font-size: 1rem;
+    min-height: 4rem;
+    animation: gradientAnimation 5s ease infinite;
+    transition: transform 0.3s, box-shadow 0.3s, animation 0.3s;
+}
+
+@keyframes gradientAnimation {
+    0% {
+        background-position: 0% 50%;
+    }
+    50% {
+        background-position: 100% 50%;
+    }
+    100% {
+        background-position: 0% 50%;
+    }
+}
+
+.card:hover {
+    transform: translateY(-5px);
+    box-shadow: 0 8px 16px rgba(87, 87, 87, 0.2);
+    animation: gradientAnimationHover 2s ease infinite;
 }
